--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 SelecionadorFotos/.vs/SelecionadorFotos/FileContentIndex/dccd7af1-1667-47f8-952b-b72f051fa76a.vsidx
 *.vsidx
+/SelecionadorFotos/.vs/SelecionadorFotos/v17/.suo
